# ssh-discovery

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ssh_discovery/: __init__.py  config.py  models.py  service.py
src/ssh_discovery/common/: __init__.py  datetime.py  errors.py  paths.py
src/ssh_discovery/transport/: __init__.py  sftp_listing.py  ssh_client.py
tests/integration/: test_discovery_service.py
tests/unit/: test_config.py  test_models.py
tests/unit/common/: test_datetime.py  test_errors.py  test_paths.py
tests/unit/transport/: test_sftp_listing.py  test_ssh_client.py
