[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-discovery"
description = "Discovery library for remote log workflows over SSH/SFTP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Timur Anvar" }]
dynamic = ["version"]
keywords = ["ssh", "sftp", "log-discovery", "remote-discovery", "paramiko"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "paramiko>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "types-paramiko>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/DreamyStranger/ssh-discovery"
Repository = "https://github.com/DreamyStranger/ssh-discovery"
Issues = "https://github.com/DreamyStranger/ssh-discovery/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ssh_discovery*"]

[tool.setuptools.package-data]
ssh_discovery = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "ssh_discovery.version.__version__" }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra"]

[tool.coverage.run]
source = ["ssh_discovery"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
pretty = true
show_error_codes = true
